<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_navigation_tips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/navigation_item_tips"
        android:textColor="@color/colorCityDay" />

    <TextView
        android:id="@+id/tv_navigation_lock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/navigation_item_lock"
        android:textColor="@color/colorCityDay" />

    <TextView
        android:id="@+id/tv_navigation_nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/navigation_item_navigation"
        android:textColor="@color/colorCityDay" />

    <TextView
        android:id="@+id/tv_navigation_music"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/navigation_item_music"
        android:textColor="@color/colorCityDay" />

    <TextView
        android:id="@+id/tv_navigation_tool"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/navigation_item_tool"
        android:textColor="@color/colorCityDay" />

</LinearLayout>
